# strawberry

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Changelog  Dockerfile  README  README.md  TODO  crowdin.yml  format-all.sh  uncrustify.cfg
ext/gstmoodbar/: CMakeLists.txt  gstfastspectrum.cpp  gstfastspectrum.h  gstmoodbarplugin.cpp  gstmoodbarplugin.h
ext/libstrawberry-common/: CMakeLists.txt  backtrace_inc.h.in
ext/libstrawberry-tagreader/: CMakeLists.txt  fmpsparser.cpp  fmpsparser.h  gmereader.cpp  gmereader.h  tagreader.cpp  tagreader.h  tagreaderbase.cpp  tagreaderbase.h  tagreadergme.cpp  tagreadergme.h  tagreadermessages.proto  tagreadertaglib.cpp  tagreadertaglib.h  tagreadertagparser.cpp  tagreadertagparser.h
ext/macdeploycheck/: CMakeLists.txt  macdeploycheck.cpp
ext/strawberry-tagreader/: CMakeLists.txt  main.cpp  tagreaderworker.cpp  tagreaderworker.h
src/: CMakeLists.txt  cmakelists-check.sh  config.h.in  main.cpp  main.h  version.h.in
src/analyzer/: analyzer.cpp  analyzerbase.cpp  analyzerbase.h  analyzercontainer.cpp  analyzercontainer.h  blockanalyzer.cpp  blockanalyzer.h  boomanalyzer.cpp  boomanalyzer.h  fht.cpp  fht.h  rainbowanalyzer.cpp  rainbowanalyzer.h  sonogram.cpp  sonogram.h  sonogramanalyzer.cpp  sonogramanalyzer.h  turbineanalyzer.cpp  turbineanalyzer.h  waverubber.cpp  waverubber.h  waverubberanalyzer.cpp  waverubberanalyzer.h
src/application/: application.cpp  application.h  mainwindow.cpp  mainwindow.h  metatypes.cpp  metatypes.h  songloader.cpp  songloader.h
src/artistbio/: artistbiofetcher.cpp  artistbiofetcher.h  artistbioprovider.cpp  artistbioprovider.h  artistbioview.cpp  artistbioview.h  lastfmartistbio.cpp  lastfmartistbio.h  wikipediaartistbio.cpp  wikipediaartistbio.h
src/avahi/: avahi.cpp  avahi.h  org.freedesktop.Avahi.EntryGroup.xml  org.freedesktop.Avahi.Server.xml
src/collection/: collection.cpp  collection.h  collectionbackend.cpp  collectionbackend.h  collectiondirectory.h  collectiondirectorymodel.cpp  collectiondirectorymodel.h  collectionfilter.cpp  collectionfilter.h  collectionfilteroptions.cpp  collectionfilteroptions.h  collectionfilterwidget.cpp  collectionfilterwidget.h  collectionfilterwidget.ui  collectionitem.cpp  collectionitem.h  collectionitemdelegate.cpp  collectionitemdelegate.h  collectionlibrary.cpp  collectionlibrary.h  collectionmodel.cpp  collectionmodel.h  collectionmodelupdate.cpp  collectionmodelupdate.h  collectionplaylistitem.cpp  collectionplaylistitem.h  collectionquery.cpp  collectionquery.h  collectionqueryoptions.cpp  collectionqueryoptions.h  collectiontask.cpp  collectiontask.h  collectionview.cpp  collectionview.h  collectionviewcontainer.cpp  collectionviewcontainer.h  collectionviewcontainer.ui  collectionwatcher.cpp  collectionwatcher.h  directory.h  (+8 more)
src/constants/: appearancesettings.h  backendsettings.h  behavioursettings.h  collectionsettings.h  contextsettings.h  coverssettings.h  dropboxconstants.h  dropboxsettings.h  filefilterconstants.h  filenameconstants.h  filesystemconstants.h  globalshortcutssettings.h  lyricssettings.h  mainwindowsettings.h  moodbarsettings.h  networkproxysettings.h  networkremoteconstants.h  networkremotesettingsconstants.h  notificationssettings.h  opentidalsettings.h  playlistsettings.h  qobuzsettings.h  radiobrowsersettings.h  radioparadisesettings.h  scrobblersettings.h  seekbarsettings.h  somafmsettings.h  spotifysettings.h  subsonicsettings.h  tidalsettings.h  timeconstants.h  transcodersettings.h  waveformsettings.h
src/context/: contextalbum.cpp  contextalbum.h  contextalbumsmodel.cpp  contextalbumsmodel.h  contextalbumsview.cpp  contextalbumsview.h  contextview.cpp  contextview.h  contextviewcontainer.ui  syncedlyricswidget.cpp  syncedlyricswidget.h
src/core/: SBSystemPreferences.h  appearance.cpp  appearance.h  application.cpp  application.h  arraysize.h  bonjour.h  bonjour.mm  cachedlist.h  commandlineoptions.cpp  commandlineoptions.h  database.cpp  database.h  dbus_metatypes.h  dbusscreensaver.cpp  dbusscreensaver.h  deletefiles.cpp  deletefiles.h  enginemetadata.cpp  enginemetadata.h  filesystemmusicstorage.cpp  filesystemmusicstorage.h  filesystemwatcherinotify.cpp  filesystemwatcherinotify.h  filesystemwatcherinterface.cpp  filesystemwatcherinterface.h  filesystemwatcherqt.cpp  filesystemwatcherqt.h  filesystemwatcherwin.cpp  filesystemwatcherwin.h  filesystemwatcherwinthread.cpp  filesystemwatcherwinthread.h  filewriteguard.cpp  filewriteguard.h  flowlayout.cpp  flowlayout.h  httpbaserequest.cpp  httpbaserequest.h  iconloader.cpp  iconloader.h  (+146 more)
src/covermanager/: albumcoverchoicecontroller.cpp  albumcoverchoicecontroller.h  albumcoverexport.cpp  albumcoverexport.h  albumcoverexport.ui  albumcoverexporter.cpp  albumcoverexporter.h  albumcoverfetcher.cpp  albumcoverfetcher.h  albumcoverfetchersearch.cpp  albumcoverfetchersearch.h  albumcoverimageresult.h  albumcoverloader.cpp  albumcoverloader.h  albumcoverloaderoptions.cpp  albumcoverloaderoptions.h  albumcoverloaderresult.h  albumcovermanager.cpp  albumcovermanager.h  albumcovermanager.ui  albumcovermanagerlist.cpp  albumcovermanagerlist.h  albumcoversearcher.cpp  albumcoversearcher.h  albumcoversearcher.ui  amazoncoverprovider.cpp  amazoncoverprovider.h  coverexportrunnable.cpp  coverexportrunnable.h  coverfromurldialog.cpp  coverfromurldialog.h  coverfromurldialog.ui  coverprovider.cpp  coverprovider.h  coverproviders.cpp  coverproviders.h  coversearchstatistics.cpp  coversearchstatistics.h  coversearchstatisticsdialog.cpp  coversearchstatisticsdialog.h  (+26 more)
src/dbus/: metatypes.h  org.freedesktop.DBus.ObjectManager.xml  org.kde.KGlobalAccel.Component.xml  org.kde.KGlobalAccel.xml  org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.Playlists.xml  org.mpris.MediaPlayer2.TrackList.xml
src/deezer/: deezersearch.cpp  deezersearch.h  deezersearchitemdelegate.cpp  deezersearchitemdelegate.h  deezersearchmodel.cpp  deezersearchmodel.h  deezersearchsortmodel.cpp  (+8 more)
tests/: CMakeLists.txt  testfht.cpp  testfht.h  testfht.pro
(+1792 files in other folders)
